# Feodevelop

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  index.html  pyproject.toml  requirements.txt
app/app/: settings.py
config/: settings.py
